# RedditTTSPublic

./: .gitignore  README.md  create_post.py  pyproject.toml  test_mode.py
src/: .env  cookies.txt  create_post.py  grab.py
